po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -5,9 +5,9 @@
 # Translators:
 # Calbasi <joan@calbasi.net>, 2013-2015
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2013-2014
-# francescbassas <francesc@babu.cat>, 2013-2017
-# francescbassas <francesc@babu.cat>, 2013
-# francescbassas <francesc@babu.cat>, 2012-2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2013-2017
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2012-2013
 # ixiam <info@ixiam.com>, 2016
 # Marti Prat <m.prat@ixiam.com>, 2013-2014
 # Marti Prat <m.prat@ixiam.com>, 2013
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-14 23:02+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2017-02-21 10:05+0000\n"
+"Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -895,7 +895,7 @@ msgstr "Afegit per"
 #: CRM/Activity/Form/Task/PickOption.php
 #: templates/CRM/Activity/Form/ActivityView.tpl
 msgid "With Contact"
-msgstr "Amb el/s contacte/s"
+msgstr "Amb el contacte"
 
 #: CRM/Activity/Form/Activity.php
 msgid "Followup Activity"
@@ -3066,7 +3066,7 @@ msgstr "El pes del llindar per considerar els contactes com a coincidents:"
 
 #: CRM/Contact/Form/DedupeRules.php
 msgid "Please select at least one field."
-msgstr "Si us plau, seleccioni almenys un camp"
+msgstr "Seleccioneu almenys un camp."
 
 #: CRM/Contact/Form/DedupeRules.php
 msgid "The rule '%1' has been saved."
@@ -13209,7 +13209,7 @@ msgstr "Refina la cerca..."
 
 #: js/Common.js
 msgid "Toggle fullscreen"
-msgstr ""
+msgstr "Canvia a pantalla completa"
 
 #: js/Common.js
 msgid "You have unsaved changes."
@@ -17870,7 +17870,7 @@ msgstr ""
 
 #: templates/CRM/Custom/Form/MoveField.tpl
 msgid "Select a different Custom Data Set for this field."
-msgstr "Seleccioni un conjunt de dades personalitzades diferents per aquest camp."
+msgstr "Seleccioneu un conjunt de dades personalitzades diferents per aquest camp."
 
 #: templates/CRM/Custom/Form/Option.tpl
 msgid "View Option"
@@ -18337,7 +18337,7 @@ msgstr ""
 
 #: templates/CRM/Form/attachment.tpl
 msgid "Browse to the <strong>file</strong> you want to upload."
-msgstr "Seleccioni el <strong>arxiu</strong> que vulgui carregar."
+msgstr "Navegueu fins al <strong>fitxer</strong> que voleu carregar."
 
 #: templates/CRM/Form/attachment.tpl
 msgid "You can have a maximum of %1 attachment(s)."
@@ -19566,7 +19566,7 @@ msgstr ""
 msgid ""
 "Select the type of CiviCRM record and the field you want to include in this "
 "Profile."
-msgstr "Seleccioni el  tipus de registre CiviCRM i el camp que vol incloure en aquest perfil"
+msgstr "Seleccioneu el  tipus de registre CiviCRM i el camp que voleu incloure en aquest perfil."
 
 #: templates/CRM/UF/Form/Field.tpl
 msgid ""
@@ -24698,7 +24698,7 @@ msgstr "S'han processat els següents registres. Els registres de pertinença am
 
 #: CRM/Upgrade/Page/Cleanup.php
 msgid "Could not find any records to process."
-msgstr "No s'ha trobat registres per a processar"
+msgstr "No s'han trobat registres a processar."
 
 #: CRM/Upgrade/Page/Cleanup.php
 msgid ""
@@ -24712,7 +24712,7 @@ msgstr "Actualitzeu el CiviCRM a la versió %1"
 
 #: CRM/Upgrade/Page/Upgrade.php
 msgid "Unrecognized upgrade action"
-msgstr "Acció de actualització desconeguda "
+msgstr "Acció d'actualització desconeguda"
 
 #: CRM/Upgrade/Page/Upgrade.php
 msgid "Upgrade CiviCRM from v %1 To v %2"
@@ -26041,8 +26041,8 @@ msgstr ""
 #: CRM/Utils/Check/Component/Env.php
 msgid "Extension Update Available"
 msgid_plural "%count Extension Updates Available"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Actualització d'extensió disponible"
+msgstr[1] "%count actualitzacions d'extensions disponibles"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "1 extension is up-to-date:"
@@ -26154,11 +26154,11 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Security.php
 msgid "Remote Profiles Enabled"
-msgstr ""
+msgstr "Perfils remots habilitats"
 
 #: CRM/Utils/Check.php
 msgid "View details and manage alerts"
-msgstr ""
+msgstr "Visualitza els detalls i gestiona les alertes"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Emergency"
@@ -26581,11 +26581,11 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Contact Deleted by Merge"
-msgstr ""
+msgstr "Contacte eliminat per combinació"
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Contact was merged into another contact"
-msgstr ""
+msgstr "El contacte s'ha combinat amb un altre contacte"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Close Accounting Period"
