--- a/po/ca_ES/case.po
+++ b/po/ca_ES/case.po
@@ -4,16 +4,16 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2013
-# francescbassas <francesc@babu.cat>, 2014-2017
-# francescbassas <francesc@babu.cat>, 2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2014-2017
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2013
 # ixiam <info@ixiam.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-13 09:51+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2017-02-21 09:45+0000\n"
+"Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -243,7 +243,7 @@ msgstr "Enllaç al cas"
 
 #: CRM/Case/Form/Activity/LinkCases.php
 msgid "Please select some other case to link."
-msgstr "Si us plau, seleccioni un altre cas per a enllaçar "
+msgstr "Seleccioneu un altre cas per enllaçar."
 
 #: CRM/Case/Form/Activity/LinkCases.php
 msgid "Selected case is already linked."
@@ -298,7 +298,7 @@ msgstr ""
 
 #: CRM/Case/Form/ActivityToCase.php CRM/Case/XMLProcessor/Report.php
 msgid "With Contact(s)"
-msgstr "Amb el/s contacte/s"
+msgstr "Amb els contactes"
 
 #: CRM/Case/Form/ActivityView.php
 msgid "Activity Revision History"
@@ -362,7 +362,7 @@ msgstr "Afegir cronologia "
 
 #: CRM/Case/Form/CaseView.php
 msgid "Select Case for Merge"
-msgstr "Seleccioni el cas per a unir "
+msgstr "Seleccioneu el cas per combinar"
 
 #: CRM/Case/Form/CaseView.php
 msgid "- select type -"
@@ -765,7 +765,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/ActivityToCase.tpl
 msgid "Please select a case from the list"
-msgstr "si us plau, seleccioni un cas de la llista "
+msgstr "Seleccioneu un cas de la llista"
 
 #: templates/CRM/Case/Form/ActivityToCase.tpl
 msgid "Unable to file on case."
