--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-20 15:50+0000\n"
-"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-02-21 11:19+0000\n"
+"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1932,7 +1932,7 @@ msgid ""
 "before you can use Batch Update via Profile. Navigate to Administer CiviCRM "
 "> Customize Data and Screens > CiviCRM Profile to configure a Profile. "
 "Consult the online Administrator documentation for more information."
-msgstr ""
+msgstr "Moraćete da kreirate Profil koji sadrži %1 polja koja želite da uredite pre nego što možete koristiti opciju Serijsko ažuriranje preko profila. Idite na Administriraj CiviCRM > Sopstvena podešavanja podataka i ekrana > Prolifi da biste podesili profil. Za više informacija pogledajte dokumentaciju za online administratora."
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 msgid "Profile Required"
@@ -1944,7 +1944,7 @@ msgstr "Štampa donacija"
 
 #: CRM/Contribute/Form/Task/Status.php
 msgid "Please select only online contributions with Pending status."
-msgstr ""
+msgstr "Izaberite samo online donacije sa statusom na čekanju."
 
 #: CRM/Contribute/Form/Task/Status.php
 msgid ""
@@ -1954,7 +1954,7 @@ msgstr "ID transakcije već postoji u bazi podataka. Uključite broj računa za 
 
 #: CRM/Contribute/Form/Task/Status.php
 msgid "Update Pending Status"
-msgstr ""
+msgstr "Ažuriraj status na čekanju"
 
 #: CRM/Contribute/Form/Task/Status.php
 msgid ""
