--- a/po/sr_RS@latin/report.po
+++ b/po/sr_RS@latin/report.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Đorđe Kolaković <djordje@catalystbalkans.org>, 2016-2017
+# Marinela Panić <marinela@catalystbalkans.org>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-19 21:35+0000\n"
-"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-02-21 12:43+0000\n"
+"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -282,7 +283,7 @@ msgstr "Trajanje (dana)"
 
 #: CRM/Report/Form/Case/Summary.php
 msgid "Staff Member"
-msgstr ""
+msgstr "Zaposleni/a"
 
 #: CRM/Report/Form/Case/Summary.php
 msgid "Staff Relationship"
@@ -1513,15 +1514,15 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Preview PDF"
-msgstr ""
+msgstr "Pregledaj PDF"
 
 #: CRM/Report/Form.php
 msgid "Preview CSV"
-msgstr ""
+msgstr "Pregledaj CSV"
 
 #: CRM/Report/Form.php
 msgid "Preview Report"
-msgstr ""
+msgstr "Pregledaj izveštaj"
 
 #: CRM/Report/Form.php
 msgid "Is less than or equal to"
