po: update po/cy_GB/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/cy_GB/mailing.po
+++ b/po/cy_GB/mailing.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-17 11:49+0000\n"
+"PO-Revision-Date: 2017-02-22 16:31+0000\n"
 "Last-Translator: Robin Farrar <hogyndrwg@gmail.com>\n"
 "Language-Team: Welsh (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/cy_GB/)\n"
 "MIME-Version: 1.0\n"
@@ -1230,28 +1230,28 @@ msgstr "Gweld rhagolwg o Restr Derbynwyr"
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Edit Recipient Options"
-msgstr ""
+msgstr "Golygu Opsiynau Derbynydd"
 
 #: ang/crmMailing/BlockResponses.html ang/crmMailing/BlockReview.html
 #: ang/crmMailing/EmailAddrCtrl.js ang/crmMailingAB/EditCtrl/report.html
 msgid "Track Replies"
-msgstr ""
+msgstr "Tracio Atebion"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond to Replies"
-msgstr ""
+msgstr "Ateb yn Awtomatig i Ymatebion"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond Message"
-msgstr ""
+msgstr "Neges Ymateb Awtomatig"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Include:"
-msgstr ""
+msgstr "Cynnwys:"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Exclude:"
-msgstr ""
+msgstr "Eithrio:"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1261,11 +1261,11 @@ msgstr ""
 #: ang/crmMailing/PreviewComponentDialogCtrl.html
 #: ang/crmMailing/PreviewMgr/full.html ang/crmMailingAB/EditCtrl/edit.html
 msgid "Plain Text"
-msgstr ""
+msgstr "Testun Plaen"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click Throughs"
-msgstr ""
+msgstr "Cliciadau Drwodd"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Opens"
@@ -1274,16 +1274,16 @@ msgstr "Wedi Agor"
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 #: templates/CRM/Mailing/Form/Settings.tpl
 msgid "Responding"
-msgstr ""
+msgstr "Ymateb"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Auto-Respond"
-msgstr ""
+msgstr "Ateb yn Awtomatig"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 #: templates/CRM/Mailing/Page/Resubscribe.tpl
 msgid "Resubscribe"
-msgstr ""
+msgstr "Ail-danysgrifio"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1292,31 +1292,31 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Publication"
-msgstr ""
+msgstr "Cyhoeddiad"
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send immediately"
-msgstr ""
+msgstr "Anfon yn syth"
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send at:"
-msgstr ""
+msgstr "Anfon am:"
 
 #: ang/crmMailing/BlockSummary.html ang/crmMailingAB/BlockSetup.html
 msgid "Select Campaign"
-msgstr ""
+msgstr "Dewis Ymgyrch:"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click Throughs"
-msgstr ""
+msgstr "Tracio Cliciadau Trwodd"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Opens"
-msgstr ""
+msgstr "Tracio Pan Gaiff ei Agor"
 
 #: ang/crmMailing/BodyHtml.html ang/crmMailing/BodyText.html
 msgid "Required tokens are missing."
-msgstr ""
+msgstr "Mae tocynnau sydd eu hangen ar goll."
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1324,11 +1324,11 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/wizard.html
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "This mailing has been submitted."
-msgstr ""
+msgstr "Mae'r postiad yma wedi ei gyflwyno."
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Define Mailing"
-msgstr ""
+msgstr "Diffinio Postiad"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1337,7 +1337,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Header and Footer"
-msgstr ""
+msgstr "Pennyn a Throedyn"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1346,17 +1346,17 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Responses"
-msgstr ""
+msgstr "Ymatebion"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Review and Schedule"
-msgstr ""
+msgstr "Adolygu ac Amseru"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/wizard.html
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "Review"
-msgstr ""
+msgstr "Adolygu"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1365,7 +1365,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Delete Draft"
-msgstr ""
+msgstr "Dileu Drafft"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1374,7 +1374,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Are you sure you want to permanently delete this mailing?"
-msgstr ""
+msgstr "Ydych chi'n siwr eich bod am ddileu'r postiad hwn yn barhaol?"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1383,106 +1383,106 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Save Draft"
-msgstr ""
+msgstr "Safio Drafft"
 
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "Submit and Approve Mailing"
-msgstr ""
+msgstr "Cyflwyno a Chymeradwyo Postiad"
 
 #: ang/crmMailing/EditMailingCtrl.js ang/crmMailingAB/EditCtrl.js
 #: ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Submitting..."
-msgstr ""
+msgstr "Cyflwyno..."
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "(Estimating)"
-msgstr ""
+msgstr "(Amcangyfrifo)"
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/PreviewRecipCtrl.html
 msgid "No recipients"
-msgstr ""
+msgstr "Dim derbynwyr"
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "~1 recipient"
-msgstr ""
+msgstr "~1 derbyniwr"
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "~%1 recipients"
-msgstr ""
+msgstr "~%1 derbyniwr"
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/services.js
 msgid "Previewing..."
-msgstr ""
+msgstr "Creu rhagolwg..."
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "Preview (%1)"
-msgstr ""
+msgstr "Rhagolwg (%1)"
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Dedupe by email"
-msgstr ""
+msgstr "Dileu cofnodion dyblyg yn ôl ebost"
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Selection Method"
-msgstr ""
+msgstr "Dull Dewis"
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid "Conflict"
-msgstr ""
+msgstr "Gwrthdaro"
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid ""
 "The \"%1\" option conflicts with the \"%2\" option. The \"%2\" option has "
 "been disabled."
-msgstr ""
+msgstr "Mae gwrthdaro rhwng opsiwn \"%1\" ac opsiwn \"%2\". Mae opsiwn \"%2\" wedi ei analluogi."
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
 "The mailing must include the street address of the organization. Please "
 "insert the %1 token."
-msgstr ""
+msgstr "Rhaid i'r postiad gynnwys cyfeiriad stryd y mudiad. Rhowch docyn %1."
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
 "The mailing must allow recipients to (a) unsubscribe from the mailing-list or (b) completely opt-out from all\n"
 "  mailings. Please insert an unsubscribe or opt-out token."
-msgstr ""
+msgstr "Rhaid i'r rhestr bostio adael i dderbyniwyr (a) dad-danysgrifio o'r rhestr-bostio neu (b) gadael pob postiad. Rhowch docyn dad-danysgrifio neu optio-allan."
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid "Via Web"
-msgstr ""
+msgstr "Trwy'r We"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid "Via Email"
-msgstr ""
+msgstr "Trwy Ebost"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
 "Alternatively, you may select a header or footer which includes the required"
 " tokens."
-msgstr ""
+msgstr "Neu, gallech ddewis bennyn neu droedyn sy'n cynnwys y tocynnau sydd eu hangen."
 
 #: ang/crmMailing/EmailBodyCtrl.js
 msgid "Required tokens"
-msgstr ""
+msgstr "Tocynnau sydd eu hangen"
 
 #: ang/crmMailing/MsgTemplateCtrl.js
 msgid "Save Template"
-msgstr ""
+msgstr "Safio Templed"
 
 #: ang/crmMailing/PreviewComponentCtrl.js
 msgid "Invalid component ID (%1)"
-msgstr ""
+msgstr "ID cydran annilys (%1)"
 
 #: ang/crmMailing/PreviewRecipCtrl.html
 msgid ""
 "Based on current data, approximately %1 contacts will receive a copy of the "
 "mailing."
-msgstr ""
+msgstr "Ar sail data cyfredol, bydd oddeutu %1 o gysylltiadau yn derbyn copi o'r postiad."
 
 #: ang/crmMailing/PreviewRecipCtrl.html
 msgid "Below is a sample of the first %1 recipients."
-msgstr ""
+msgstr "Isod mae sampl o'r %1 derbyniwr cyntaf."
 
 #: ang/crmMailing/PreviewRecipCtrl.html
 msgid ""
