--- a/po/ru_RU/menu.po
+++ b/po/ru_RU/menu.po
@@ -17,12 +17,13 @@
 # vrp <v.r.p.2010@yandex.kz>, 2011
 # Victor Ilyin <wictinfo@gmail.com>, 2012
 # Yuriy Shpak <y.shpak@servantek.net>, 2012
+# Анна Ладошкина <webdev@foralien.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-22 17:26+0000\n"
+"Last-Translator: Анна Ладошкина <webdev@foralien.com>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2177,7 +2178,7 @@ msgstr "Настроить CKEditor"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM Resources"
-msgstr ""
+msgstr "Ресурсы CiviCRM"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
@@ -2213,7 +2214,7 @@ msgstr "Расширения"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "My Reports"
-msgstr ""
+msgstr "Мои отчеты"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
