--- a/po/ru_RU/common-base.po
+++ b/po/ru_RU/common-base.po
@@ -24,13 +24,14 @@
 # vrp <v.r.p.2010@yandex.kz>, 2011,2015
 # Victor Ilyin <wictinfo@gmail.com>, 2012
 # Yuriy Shpak <y.shpak@servantek.net>, 2011-2012
+# Анна Ладошкина <webdev@foralien.com>, 2017
 # Фёдор Ходьков <fkhodkov@gmail.com>, 2013,2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-23 07:14+0000\n"
+"Last-Translator: Анна Ладошкина <webdev@foralien.com>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26324,7 +26325,7 @@ msgstr ""
 
 #: CRM/Utils/Check.php
 msgid "View details and manage alerts"
-msgstr ""
+msgstr "Просмотр всех уведомлений"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Emergency"
