po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -8,6 +8,7 @@
 # Francesc Bassas i Bullich <francesc@babu.cat>, 2013-2017
 # Francesc Bassas i Bullich <francesc@babu.cat>, 2013
 # Francesc Bassas i Bullich <francesc@babu.cat>, 2012-2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2017
 # ixiam <info@ixiam.com>, 2016
 # Marti Prat <m.prat@ixiam.com>, 2013-2014
 # Marti Prat <m.prat@ixiam.com>, 2013
@@ -17,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-21 10:05+0000\n"
+"PO-Revision-Date: 2017-02-24 13:11+0000\n"
 "Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -5503,7 +5504,7 @@ msgstr "Mapa"
 #: CRM/Contact/Selector/Custom.php CRM/Contact/Selector.php
 #: CRM/Profile/Page/Router.php
 msgid "Map Contact"
-msgstr "Mapa de contactes"
+msgstr "Ubica el contacte en el mapa"
 
 #: CRM/Contact/Selector/Custom.php CRM/Contact/Selector.php
 #: CRM/Profile/Selector/Listings.php
@@ -5597,7 +5598,7 @@ msgstr "Combina els contactes"
 
 #: CRM/Contact/Task.php
 msgid "Map Contacts"
-msgstr "Mapa de contactes"
+msgstr "Ubica els contactes en el mapa"
 
 #: CRM/Contact/Task.php
 msgid "Add Contacts to Event"
@@ -25116,7 +25117,7 @@ msgstr "Combina els contactes"
 
 #: CRM/Contact/Task.php
 msgid "Map contacts"
-msgstr ""
+msgstr "Ubica els contactes en el mapa"
 
 #: CRM/Contact/Task.php
 msgid "Register participants for event"
