--- a/po/ru_RU/common-base.po
+++ b/po/ru_RU/common-base.po
@@ -30,7 +30,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-23 07:14+0000\n"
+"PO-Revision-Date: 2017-02-24 18:37+0000\n"
 "Last-Translator: Анна Ладошкина <webdev@foralien.com>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
@@ -26514,7 +26514,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.tpl
 msgid "Preview Document"
-msgstr ""
+msgstr "Просмотр документа"
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.tpl
 msgid "Downloading..."
