--- a/po/ru_RU/report.po
+++ b/po/ru_RU/report.po
@@ -17,13 +17,14 @@
 # vrp <v.r.p.2010@yandex.kz>, 2011
 # Yuri Kozlov <yuray@komyakino.ru>, 2013
 # Yuriy Shpak <y.shpak@servantek.net>, 2012
+# Анна Ладошкина <webdev@foralien.com>, 2017
 # Фёдор Ходьков <fkhodkov@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-24 18:51+0000\n"
+"Last-Translator: Анна Ладошкина <webdev@foralien.com>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1755,7 +1756,7 @@ msgstr "Зарегестрированные  шаблоны"
 
 #: CRM/Report/Page/Report.php
 msgid "%1 - Template"
-msgstr ""
+msgstr "%1 - Шаблон "
 
 #: CRM/Report/Page/Report.php
 msgid ""
@@ -2067,7 +2068,7 @@ msgstr "В настоящее время нет шаблонов отчетов.
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Save a copy..."
-msgstr ""
+msgstr "Сохранить копию"
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "(Copy) "
@@ -2075,20 +2076,20 @@ msgstr ""
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Print to PDF"
-msgstr ""
+msgstr "Печать в PDF"
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Export as CSV"
-msgstr ""
+msgstr "Экспорт в csv"
 
 #: CRM/Report/BAO/ReportInstance.php CRM/Report/Page/InstanceList.php
 msgid "Delete report"
-msgstr ""
+msgstr "Удалить отчет"
 
 #: CRM/Report/BAO/ReportInstance.php CRM/Report/Page/InstanceList.php
 msgid ""
 "Are you sure you want delete this report? This action cannot be undone."
-msgstr ""
+msgstr "Вы уверены, что хотите удалить отчет? Это действие будет невозможно отметить."
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Name"
@@ -2170,7 +2171,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "View Contribution Details"
-msgstr ""
+msgstr "Просмотреть детали взноса"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Email on hold"
@@ -2288,7 +2289,7 @@ msgstr ""
 
 #: CRM/Report/Form/Instance.php templates/CRM/Report/Page/InstanceList.tpl
 msgid "View Results"
-msgstr ""
+msgstr "Просмотреть"
 
 #: CRM/Report/Form/Instance.php
 msgid "Show Criteria"
@@ -2372,11 +2373,11 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Refresh results"
-msgstr ""
+msgstr "Обновить результаты"
 
 #: CRM/Report/Form.php
 msgid "View results"
-msgstr ""
+msgstr "Просмотреть"
 
 #: CRM/Report/Info.php
 msgid "administer private reports"
@@ -2388,23 +2389,23 @@ msgstr ""
 
 #: CRM/Report/Info.php
 msgid "view report sql"
-msgstr ""
+msgstr "Просмотреть sql отчетов"
 
 #: CRM/Report/Info.php
 msgid "View sql used in CiviReports"
-msgstr ""
+msgstr "Просмотреть sql отчетов"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "View as pdf"
-msgstr ""
+msgstr "Просмотреть как  pdf"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Print report"
-msgstr ""
+msgstr "Печать отчета"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Export to csv"
-msgstr ""
+msgstr "Экспорт в csv"
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid "Link to "
