po: update po/sr_RS@latin/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-21 11:19+0000\n"
+"PO-Revision-Date: 2017-02-24 14:42+0000\n"
 "Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -664,7 +664,7 @@ msgid ""
 "This contact has pending or overdue pledge payments. <a href=\"%1\">Click "
 "here to view their Pledges tab</a> and verify whether this contribution "
 "should be applied as a pledge payment."
-msgstr ""
+msgstr "Ovaj kontakt ima uplate obaveze na čekanju ili sa isteklim rokom. <a href=\"%1\">Kliknite ovde da pogledate njihovu karticu sa obavezama</a> i potvrdite da li ova donacija treba da bude zabeležena kao uplata obaveze."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid ""
@@ -861,7 +861,7 @@ msgstr "Ova donacija je omogućena uz pomoć <strong>%1</strong>, koji/a podrža
 msgid ""
 "You can support it as well - once you complete the donation, you will be "
 "able to create your own Personal Campaign Page!"
-msgstr ""
+msgstr "I vi je možete podržati - čim izvršite uplatu donacije, moći ćete da kreirate svoju Stranicu lične kampanje!"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Show my contribution in the public honor roll"
@@ -1067,7 +1067,7 @@ msgstr "Procesor uplata je obavezno polje."
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "The sum of fee amount and net amount must be equal to total amount"
-msgstr ""
+msgstr "Zbir iznosa kotizacije i neto iznosa mora biti jednak ukupnom iznosu"
 
 #: CRM/Contribute/Form/Contribution.php
 #: CRM/Contribute/Form/ContributionPage/Amount.php
@@ -1226,25 +1226,25 @@ msgid ""
 "Price Set on that form. Membership Price Sets may include additional fields "
 "for non-membership options that require an additional fee (e.g. magazine "
 "subscription) or an additional voluntary contribution."
-msgstr ""
+msgstr "Ne možete koristiti Set cena članstva kada je uključena sekcija za Iznose donacija. Kliknite na karticu Članstva iznad i odaberite Set cena članstva u tom formularu. Set cena članstva može da sadrži dodatna polja za opcije nevezane za članstvo koje zahtevaju dodatnu uplatu (npr. pretplata na magazin) ili dodatnu dobrovoljnu donaciju."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid ""
 "To disable Contribution Amounts section you need to first disable Separate "
 "Membership Payment option from Membership Settings."
-msgstr ""
+msgstr "Da biste isključili sekciju za iznose donacija prvo treba da isključite opciju za odvojeno plaćanje članstva u podešavanjima članstva."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid ""
 "You need to enable Separate Membership Payment when online contribution page"
 " is configured for both Membership and Recurring Contribution."
-msgstr ""
+msgstr "Moraćete da aktivirate Odvojeno plaćanje članstva kada je stranica za online donacije konfigurisana i za Članstvo i za Periodične donacije."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid ""
 "You cannot enable both Recurring Contributions and Auto-renew memberships on"
 " the same online contribution page."
-msgstr ""
+msgstr "Ne možete aktivirati Periodične donacije i Automatsko obnavljanje članstva na istoj stranici za online donacije."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Please enter the contribution amount label."
@@ -1270,7 +1270,7 @@ msgstr "Unesite instrukcije koje će biti poslate donatoru kada se odluče za 'n
 msgid ""
 "You cannot enable both a Contribution Price Set and Membership Signup on the"
 " same online contribution page."
-msgstr ""
+msgstr "Ne možete aktivirati Set cena donacija i Prijavu za članstvo na istoj stranici za online donacije."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "At least one recurring frequency option needs to be checked."
@@ -1990,7 +1990,7 @@ msgstr "Detalji ažurirani"
 msgid ""
 "Billing details for the recurring contribution of %1, every %2 %3 have been "
 "updated."
-msgstr ""
+msgstr "Detalji naplate za periodičnu donaciju %1, svakog %2 %3 su ažurirani."
 
 #: CRM/Contribute/Form/UpdateBilling.php
 msgid "Recurring Contribution Billing Details Updated"
@@ -2420,7 +2420,7 @@ msgid ""
 "Click the button below to cancel this commitment and stop future "
 "transactions. This does not affect contributions which have already been "
 "completed."
-msgstr ""
+msgstr "Kliknite na dugme ispod da biste otkazali ovu obavezu i zaustavili buduće transakcije. Ovo neće uticati na već izvršene donacije."
 
 #: templates/CRM/Contribute/Form/CancelSubscription.tpl
 msgid ""
@@ -2727,7 +2727,7 @@ msgstr "Dobićete email priznanicu sa informacijama o tome kako da otkažete aut
 msgid ""
 "This recurring contribution will be automatically processed every %1 %2s for"
 " a total %3 installments (including this initial contribution)."
-msgstr ""
+msgstr "Ova periodična donacija će biti obrađena automatski svakog/e %1 %2 u ukupno %3 rata (uključujući i ovu prvu donaciju)."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
@@ -2738,7 +2738,7 @@ msgstr "Ova periodična donacija će biti obrađena automatski svakog/e %1 na uk
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
 "This recurring contribution will be automatically processed every %1 %2s."
-msgstr ""
+msgstr "Ova periodična donacija će biti obrađena automatski svakog/e %1 %2."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "This recurring contribution will be automatically processed every %1."
@@ -2755,20 +2755,20 @@ msgid ""
 "We will record your initial pledge payment when we receive it from you. You "
 "will be able to modify or cancel future pledge payments at any time by "
 "logging in to your account or contacting us at %1."
-msgstr ""
+msgstr "Zabeležićemo vašu prvu uplatu obaveze kada je dobijemo od vas. Moći ćete da menjate ili otkazujete buduće uplate obaveze kada god želite tako što ćete se ulogovati na vaš nalog ili ukoliko nas kontaktirate na %1."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
 "Your initial pledge payment has been processed. You will be able to modify "
 "or cancel future pledge payments at any time by contacting us at %1."
-msgstr ""
+msgstr "Vaša prva uplata obaveze je obrađena.  Moći ćete da menjate ili otkazujete buduće uplate obaveze kada god želite tako što ćete nas kontaktirati na %1."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
 "We will send you a payment reminder %1 days prior to each scheduled payment "
 "date. The reminder will include a link to a page where you can make your "
 "payment online."
-msgstr ""
+msgstr "Poslaćemo vam podsetnik za uplatu %1 dana pre svakog datuma zakazane uplate. U podsetniku će se nalaziti link ka stranici gde možete izvršiti svoju uplatu online."
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid ""
@@ -2777,7 +2777,7 @@ msgid ""
 " you want a receipt to be sent when this contribution is recorded, click "
 "Cancel and then click Edit from the Summary tab to add an email address "
 "before recording the contribution."
-msgstr ""
+msgstr "Nećete biti u mogućnosti da pošaljete automatsku email priznanicu za ovu donaciju pošto ne postoji email adresa za ovaj kontakt. Ukoliko želite da pošaljete priznanicu kada se ova donacija zabeleži, kliknite na Otkaži, zatim Uredi u Kratkom pregledu da biste dodali email adresu pre beleženja donacije."
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid ""
@@ -2813,7 +2813,7 @@ msgid ""
 " to cancel at any time. You will receive an email receipt for each recurring"
 " contribution. The receipts will include a link you can use if you decide to"
 " modify or cancel your future contributions."
-msgstr ""
+msgstr "Vaša periodična donacija će biti automatski obrađena u broju rata koji ste odredili. Možete ostaviti polje za broj rata prazno ukoliko želite da se obavežete na periodično doniranje bez krajnjeg roka. U svakom slučaju, možete otkazati periodičnu donaciju kada god želite. Primićete email sa priznanicom za svaku periodičnu donaciju. U priznanicama će se nalaziti link preko kojeg možete menjati ili otkazati svoje buduće donacije ukoliko tako odlučite."
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid ""
@@ -2991,14 +2991,14 @@ msgid ""
 "Instructions added to Confirmation and Thank-you pages, as well as the "
 "confirmation email, when the user selects the 'pay later' option (e.g. 'Mail"
 " your check to ... within 3 business days.')."
-msgstr ""
+msgstr "Instrukcije su dodate na Stranicu za Potvrdu i Stranicu za zahvalnost, kao i email sa potvrdom, kada korisnik izabere opciju 'plati kasnije' (npr. 'Pošaljite račun ... u roku od 3 radna dana.')."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
 "Uncheck this box if you are using this contribution page for membership "
 "signup and renewal only - and you do NOT want users to select or enter any "
 "additional contribution amounts."
-msgstr ""
+msgstr "Odštiklirajte ovu kućicu ukoliko koristite ovu stranicu za donacije samo za prijavu za članstvo i obnovu članstva - i ne želite da korisnici biraju ili unose bilo koje dodatne iznose donacija."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
@@ -3021,7 +3021,7 @@ msgid ""
 "Check this box if you want to give users the option to make recurring "
 "contributions. This feature requires that you use a payment processor which "
 "supports recurring billing / subscriptions functionality."
-msgstr ""
+msgstr "Štiklirajte ovu kućicu ukoliko želite da date korisnicima opciju za periodične donacije. Ova opcija zahteva korišćenje procesora uplate koji podržava funkcionalnosti periodične naplate / pretplate."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid "Select recurring units supported for recurring payments."
@@ -3065,7 +3065,7 @@ msgid ""
 "If you have chosen to <strong>Allow Other Amounts</strong>, you can use the "
 "fields above to control minimum and/or maximum acceptable values (e.g. don't"
 " allow contribution amounts less than %1)."
-msgstr ""
+msgstr "Ukoliko ste odabrali da <strong>Dozvolite druge iznose</strong>,možete upotrebiti polja iznad da kontrolišete minimalne i/ili maksimalne prihvatljive vrednosti (npr. ne dozvoli iznos donacije manji od %1)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid "Fixed Contribution Options"
@@ -3076,14 +3076,14 @@ msgid ""
 "Use the table below to enter up to ten fixed contribution amounts. These "
 "will be presented as a list of radio button options. Both the label and "
 "dollar amount will be displayed."
-msgstr ""
+msgstr "Upotrebite tabelu ispod da biste uneli do deset iznosa donacija. Oni će biti prikazani u vidu liste na kojoj se može izabrati samo jedna opcija. biće prikazani i oznaka i izonos u dolarima."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
 " Click <a id='quickconfig' href='#'>here</a> if you want to configure the "
 "Fixed Contribution Options below as part of a Price Set, with the added "
 "flexibility and complexity that entails."
-msgstr ""
+msgstr "Kliknite <a id='quickconfig' href='#'>ovde </a> ukoliko želite da podesite Opcije fiksne donacije kao deo Seta cena sa dodatnom fleksibilnošću i složenošću."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid "Contribution Label"
@@ -3096,7 +3096,7 @@ msgid ""
 "include additional fields for non-membership options that require an "
 "additional fee (e.g. magazine subscription) or an additional voluntary "
 "contribution.</span>"
-msgstr ""
+msgstr "Ne možete uključiti sekciju za iznose donacija kada koristite Set cena za članstvo. (Pogledajte karticu Članstva iznad). Setovi cena za članstvo mogu da sadrže dodatna polja da opcije nevezane za ćlanstvo koje zahtevaju dodatnu uplatu (npr. pretplata za magazin) ili dodatnu dobrovoljnu donaciju.</span>"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 msgid "Contributer Profiles"
