--- a/po/uk_UA/pledge.po
+++ b/po/uk_UA/pledge.po
@@ -7,12 +7,13 @@
 # Sergiy <shemet.s@ua.fm>, 2015
 # Sergiy <shemet.s@ua.fm>, 2015
 # The Explorer, 2016
+# Євген Шульга <yevhen.shulha@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-24 10:16+0000\n"
+"Last-Translator: Євген Шульга <yevhen.shulha@gmail.com>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/civicrm/civicrm/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,7 +24,7 @@ msgstr ""
 #: CRM/Pledge/BAO/Pledge.php CRM/Pledge/Form/PledgeView.php
 #: CRM/Pledge/Selector/Search.php
 msgid "Pledged"
-msgstr "Надана застава"
+msgstr "Обіцяно"
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Balance Amount"
@@ -44,7 +45,7 @@ msgstr "Дата внесеної суми платежу"
 #: CRM/Pledge/BAO/Pledge.php CRM/Pledge/BAO/Query.php
 #: templates/CRM/Pledge/Form/Search/Common.tpl
 msgid "Pledge Payment Status"
-msgstr "Статус платежу за фінансовим зобов'язанням"
+msgstr "Стан виконання обіцянки"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "%1 - due on %2 (overdue)"
