--- a/po/it_IT/mailing.po
+++ b/po/it_IT/mailing.po
@@ -3,16 +3,17 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
+# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016-2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # LinoLinux <reni.marco@gmail.com>, 2014
 # Salvatore Emanuele Schimmenti <salvatore.schimmenti@gmail.com>, 2016
+# Sandra Farnedi <sfarnedi@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-24 20:40+0000\n"
+"Last-Translator: Sandra Farnedi <sfarnedi@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,11 +31,11 @@ msgstr "Contatto email inesistente, impossibile inviare il messaggio: %1"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"%1\" is required."
-msgstr ""
+msgstr "Il campo \"%1\" è richiesto."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"body_html\" or \"body_text\" is required."
-msgstr ""
+msgstr "Il campo \"body_html\" o \"body_text\" è richiesto."
 
 #: CRM/Mailing/BAO/Mailing.php CRM/Mailing/Form/Upload.php
 msgid "This message is missing a required token - {%1}: %2"
@@ -80,7 +81,7 @@ msgstr "Il tuo messaggio."
 msgid ""
 "The <a href=\"%1\">default mailbox</a> has not been configured. You will "
 "find <a href=\"%2\">more info in the online user and administrator guide</a>"
-msgstr ""
+msgstr "La <a href=\"%1\">mailbox predefinita</a>  non è stata configurata. Per ulteriori informazioni consultare <a href=\"%2\"> la guida on line dell'amministratore </a>."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "View Mailing"
@@ -188,7 +189,7 @@ msgstr ""
 #: CRM/Mailing/DAO/Component.php CRM/Mailing/DAO/Mailing.php
 #: templates/CRM/Mailing/Page/Component.tpl
 msgid "Body Text"
-msgstr ""
+msgstr "Corpo del Testo"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component is Default?"
