--- a/po/he_IL/case.po
+++ b/po/he_IL/case.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# chaim vaidberg <chaimvaid@gmail.com>, 2017
 # noamoss <noamoss@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Yaron Shahrabani <sh.yaron@gmail.com>, 2012
@@ -11,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-25 21:42+0000\n"
+"Last-Translator: chaim vaidberg <chaimvaid@gmail.com>\n"
 "Language-Team: Hebrew (http://www.transifex.com/civicrm/civicrm/language/he/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -202,7 +203,7 @@ msgstr ""
 
 #: CRM/Case/Form/Activity/ChangeCaseStartDate.php
 msgid "New Start Date"
-msgstr ""
+msgstr "תאריך התחלה חדש"
 
 #: CRM/Case/Form/Activity/ChangeCaseStartDate.php
 msgid "Case Start Date changed successfully."
@@ -495,7 +496,7 @@ msgstr ""
 
 #: CRM/Case/Page/AJAX.php
 msgid "closed"
-msgstr ""
+msgstr "נסגר"
 
 #: CRM/Case/Page/DashBoard.php
 msgid "CiviCase Dashboard"
@@ -512,7 +513,7 @@ msgstr ""
 #: CRM/Case/Page/Tab.php CRM/Case/Selector/Search.php
 #: templates/CRM/Case/Form/Case.tpl
 msgid "Delete Case"
-msgstr ""
+msgstr "מחק תיק"
 
 #: CRM/Case/Selector/Search.php templates/CRM/Case/Form/CaseView.tpl
 msgid "Assign to Another Client"
