--- a/po/he_IL/admin.po
+++ b/po/he_IL/admin.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# chaim vaidberg <chaimvaid@gmail.com>, 2017
 # noamoss <noamoss@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # zaxy78 <zaxy78@gmail.com>, 2014
@@ -10,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-25 21:46+0000\n"
+"Last-Translator: chaim vaidberg <chaimvaid@gmail.com>\n"
 "Language-Team: Hebrew (http://www.transifex.com/civicrm/civicrm/language/he/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -270,7 +271,7 @@ msgstr "כתובת-חזרה חייבת להשתמש בפורמט של כתובת
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
-msgstr ""
+msgstr "שרת"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
@@ -307,7 +308,7 @@ msgstr "השינויים לא נשמרו."
 
 #: CRM/Admin/Form/Mapping.php
 msgid "Field Mapping"
-msgstr ""
+msgstr "מיפוי שדות"
 
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
@@ -389,7 +390,7 @@ msgstr "שם מחלקה (Class)"
 
 #: CRM/Admin/Form/Options.php
 msgid "Contacts AND Cases"
-msgstr ""
+msgstr "אנשי קשר ותיקים"
 
 #: CRM/Admin/Form/Options.php
 msgid "Cases Only"
