po: update po/ru_RU/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ru_RU/report.po
+++ b/po/ru_RU/report.po
@@ -23,7 +23,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-24 18:51+0000\n"
+"PO-Revision-Date: 2017-02-26 15:27+0000\n"
 "Last-Translator: Анна Ладошкина <webdev@foralien.com>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
@@ -2007,7 +2007,7 @@ msgstr "Пользователи с разрешением \"управлять 
 
 #: templates/CRM/Report/Page/InstanceList.tpl
 msgid "View All Reports"
-msgstr "просмотреть все заметки..."
+msgstr "Все отчеты"
 
 #: templates/CRM/Report/Page/InstanceList.tpl
 msgid "Contribution Reports"
@@ -2301,7 +2301,7 @@ msgstr ""
 
 #: CRM/Report/Form/Instance.php
 msgid "Add to My Reports?"
-msgstr ""
+msgstr "Добавить в Мои отчеты?"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Date"
@@ -2381,11 +2381,11 @@ msgstr "Просмотреть"
 
 #: CRM/Report/Info.php
 msgid "administer private reports"
-msgstr ""
+msgstr "управлять приватными отчетами"
 
 #: CRM/Report/Info.php
 msgid "Edit all private reports"
-msgstr ""
+msgstr "Редактировать все приватные отчеты"
 
 #: CRM/Report/Info.php
 msgid "view report sql"
@@ -2415,7 +2415,7 @@ msgstr ""
 msgid ""
 "If set to Yes, this report will appear in the My Reports section of the "
 "reports listing page and will only be visible by you."
-msgstr ""
+msgstr "Если выбрать \"Да\", этот отчет будет показан в секции Мои отчеты в списке отчетов и доступен для просмотра только вам"
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid "rows"
@@ -2434,7 +2434,7 @@ msgstr ""
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid "Add to My Reports"
-msgstr ""
+msgstr "Добавить в Мои отчеты"
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
@@ -2447,4 +2447,4 @@ msgstr ""
 msgid ""
 "You do not have any private reports. To add a report to this section, edit "
 "the Report Settings for a report and set 'Add to My Reports' to Yes."
-msgstr ""
+msgstr "У вас нет приватных отчетов. Чтобы добавить сюда отчет, укажите \"Да\" в настройках для \"Добавить в Мои отчеты\"."
