po: update po/ca_ES/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/batch.po
+++ b/po/ca_ES/batch.po
@@ -4,14 +4,15 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2014,2016
-# francescbassas <francesc@babu.cat>, 2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2014,2016
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-17 16:29+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2017-02-27 22:05+0000\n"
+"Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,7 +22,7 @@ msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Batch %1"
-msgstr ""
+msgstr "Lot %1"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Transactions"
@@ -37,7 +38,7 @@ msgstr "Torna a obrir el lot "
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Delete Batch"
-msgstr ""
+msgstr "Elimina el lot"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -45,7 +46,7 @@ msgstr "Descarrega el lot "
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Enter records"
-msgstr ""
+msgstr "Introdueix registres"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Batch Data Entry"
