po: update po/ca_ES/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-components.po
+++ b/po/ca_ES/common-components.po
@@ -7,6 +7,7 @@
 # Francesc Bassas i Bullich <francesc@babu.cat>, 2013-2017
 # Francesc Bassas i Bullich <francesc@babu.cat>, 2013
 # Francesc Bassas i Bullich <francesc@babu.cat>, 2012
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2017
 # ixiam <info@ixiam.com>, 2016
 # Marti Prat <m.prat@ixiam.com>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -14,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-21 10:00+0000\n"
+"PO-Revision-Date: 2017-02-27 22:06+0000\n"
 "Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -66,7 +67,7 @@ msgstr "Opció per defecte?"
 
 #: CRM/Admin/Form/Navigation.php templates/CRM/Event/Page/DashBoard.tpl
 msgid "Parent"
-msgstr ""
+msgstr "Pare"
 
 #: CRM/Admin/Form/Options.php CRM/Financial/Form/BatchTransaction.php
 #: CRM/Report/Form/Mailing/Opened.php CRM/Report/Form/Mailing/Summary.php
