--- a/po/ca_ES/event.po
+++ b/po/ca_ES/event.po
@@ -4,16 +4,17 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Calbasi <joan@calbasi.net>, 2014-2015
-# francescbassas <francesc@babu.cat>, 2013-2017
-# francescbassas <francesc@babu.cat>, 2013
-# francescbassas <francesc@babu.cat>, 2012
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2013-2017
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2012
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2017
 # ixiam <info@ixiam.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-13 09:51+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2017-02-27 22:01+0000\n"
+"Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,7 +33,7 @@ msgstr "No s'ha pogut trobar l'ID del participant"
 
 #: CRM/Event/BAO/Participant.php
 msgid "This event is full."
-msgstr ""
+msgstr "Aquest esdeveniment està complet."
 
 #: CRM/Event/BAO/Participant.php
 msgid "- Participant Fields -"
@@ -40,7 +41,7 @@ msgstr "- Camps de participant -"
 
 #: CRM/Event/BAO/Participant.php
 msgid "Participant Note"
-msgstr ""
+msgstr "Nota del participant"
 
 #: CRM/Event/BAO/Participant.php
 msgid "Participant Status Id"
