--- a/po/ca_ES/pcp.po
+++ b/po/ca_ES/pcp.po
@@ -3,16 +3,17 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# francescbassas <francesc@babu.cat>, 2014-2017
-# francescbassas <francesc@babu.cat>, 2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2014-2017
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2017
 # ixiam <info@ixiam.com>, 2016
 # Marti Prat <m.prat@ixiam.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-13 09:52+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2017-02-27 22:01+0000\n"
+"Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +39,7 @@ msgstr "Digueu-ho als amics"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "URL for this Page"
-msgstr ""
+msgstr "URL d'aquesta pàgina"
 
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
