--- a/po/ca_ES/report.po
+++ b/po/ca_ES/report.po
@@ -4,16 +4,17 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2013-2017
-# francescbassas <francesc@babu.cat>, 2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2013-2017
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2017
 # ixiam <info@ixiam.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-14 22:59+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2017-02-27 22:19+0000\n"
+"Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,11 +36,11 @@ msgstr "Títol de la instància de  l'informe"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report template ID"
-msgstr ""
+msgstr "Identificador de la plantilla de l'informe"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report instance Name"
-msgstr ""
+msgstr "Nom de la instància de l'informe"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Arguments"
@@ -47,11 +48,11 @@ msgstr ""
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance description"
-msgstr ""
+msgstr "Descripció de la instància de l'informe"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Permissions"
-msgstr ""
+msgstr "Permisos de la instància de l'informe"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Assigned to Roles"
@@ -59,11 +60,11 @@ msgstr ""
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance is Active"
-msgstr ""
+msgstr "La instància de l'informe està activa"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Created By"
-msgstr ""
+msgstr "Instància de l'informe creada per"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Owned By"
