--- a/po/ca_ES/contribute.po
+++ b/po/ca_ES/contribute.po
@@ -5,17 +5,18 @@
 # Translators:
 # Calbasi <joan@calbasi.net>, 2015
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2013-2017
-# francescbassas <francesc@babu.cat>, 2013
-# francescbassas <francesc@babu.cat>, 2012
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2013-2017
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2012
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2017
 # ixiam <info@ixiam.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-14 22:59+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2017-02-27 22:16+0000\n"
+"Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,7 +42,7 @@ msgstr "Identificador de contribucions recurrents"
 
 #: CRM/Contribute/BAO/Contribution.php
 msgid "Cannot change contribution status from %1 to %2."
-msgstr ""
+msgstr "No es pot canviar l'estat de la contribució de %1 a %2."
 
 #: CRM/Contribute/BAO/Contribution.php
 msgid ""
@@ -56,7 +57,7 @@ msgstr "Generat automàticament"
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 msgid "Automatic renewal of %1 membership cancelled."
-msgstr ""
+msgstr "S'ha cancel·lat la renovació automàtica de la pertinença %1."
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 #: CRM/Contribute/Form/CancelSubscription.php
@@ -66,7 +67,7 @@ msgstr ""
 #: CRM/Contribute/BAO/ContributionRecur.php
 #: CRM/Contribute/Form/CancelSubscription.php
 msgid "Recurring contribution cancelled"
-msgstr ""
+msgstr "S'ha cancel·lat una contribució recurrent"
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 msgid ""
